# bloxml

./: .gitignore  Cargo.toml  schema.md
src/: blox.rs  create.rs  field.rs  graph.rs  lib.rs  link.rs  method.rs
src/blox/: actor.rs  component.rs  enum_variant.rs  enums.rs  ext_state.rs  message_handlers.rs  message_set.rs  msg_enum.rs  state.rs
src/create/: component_gen.rs  ext_state_gen.rs  file_gen.rs  message_gen.rs  runtime_gen.rs  state_gen.rs  trait_impl.rs
src/graph/: node.rs  rgraph.rs  ty.rs
tests/: enum_file.json  expected_enum.json  ext_state.json  test_file.json  test_file.xml
