[package]
name = "bloxml"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0.140"
quick-xml = { version = "0.37.5", features = ["serialize"] }
petgraph = "0.8.2"

[dev-dependencies]
pretty_assertions = "1.4.1"
